packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_use_server_mount.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 1661
expression: output
---
==INPUT==


import { component$, useTask$, useStore, useStyles$ } from '@builder.io/qwik';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
		redis.set(state.text);
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

export const Child = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
	});

	return (
		<div onClick$={() => console.log('child')}>
			{state.text}
		</div>
	);
});

============================= parent_component_usetask_gdh1etuwqbu.js ==

import { useLexicalScope } from "@builder.io/qwik";
import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useTask_gDH1EtUWqBU = async ()=>{
    const [state] = useLexicalScope();
    state.text = await mongo.users();
    redis.set(state.text);
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;oDAWU;;IACR,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": "test.tsx_entry_Parent",
  "displayName": "Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "parent_component_usetask_gdh1etuwqbu",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    255,
    332
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./parent_component_0taidayhrlo"), "Parent_component_0TaiDayHrlo"));
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./child_component_9gyf01gdkqw"), "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAKA,OAAO,MAAM,uBAAS,8GAgBnB;AAEH,OAAO,MAAM,sBAAQ,4GAelB\"}")
============================= child_component_usetask_oh4n7zeqjku.js ==

import { useLexicalScope } from "@builder.io/qwik";
import mongo from "mongodb";
export const Child_component_useTask_Oh4n7ZeqJkU = async ()=>{
    const [state] = useLexicalScope();
    state.text = await mongo.users();
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;mDA6BU;;IACR,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_Oh4n7ZeqJkU",
  "entry": "test.tsx_entry_Child",
  "displayName": "Child_component_useTask",
  "hash": "Oh4n7ZeqJkU",
  "canonicalFilename": "child_component_usetask_oh4n7zeqjku",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    543,
    595
  ]
}
*/
============================= parent_component_0taidayhrlo.js ==

import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { useStore } from "@builder.io/qwik";
import { useTaskQrl } from "@builder.io/qwik";
export const Parent_component_0TaiDayHrlo = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./parent_component_usetask_gdh1etuwqbu"), "Parent_component_useTask_gDH1EtUWqBU", [
        state
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./parent_component_div_onclick_c5xe49nqd3a"), "Parent_component_div_onClick_C5XE49Nqd3A")
    }, _wrapProp(state, "text"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;4CAKiC;IAChC,MAAM,QAAQ,SAAS;QACtB,MAAM;IACP;IAEA,qBAAqB;IACrB;;;IAKA,qBACC,WAAC;QAAI,QAAQ;iBACX;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "test.tsx_entry_Parent",
  "displayName": "Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "parent_component_0taidayhrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    171,
    423
  ]
}
*/
============================= parent_component_div_onclick_c5xe49nqd3a.js (ENTRY POINT)==

export const Parent_component_div_onClick_C5XE49Nqd3A = ()=>console.log('parent');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAiBiB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_onClick_C5XE49Nqd3A",
  "entry": null,
  "displayName": "Parent_component_div_onClick",
  "hash": "C5XE49Nqd3A",
  "canonicalFilename": "parent_component_div_onclick_c5xe49nqd3a",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    363,
    390
  ]
}
*/
============================= child_component_9gyf01gdkqw.js ==

import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { useStore } from "@builder.io/qwik";
import { useTaskQrl } from "@builder.io/qwik";
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./child_component_usetask_oh4n7zeqjku"), "Child_component_useTask_Oh4n7ZeqJkU", [
        state
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./child_component_div_onclick_ellivsnaioq"), "Child_component_div_onClick_elliVSnAiOQ")
    }, _wrapProp(state, "text"), 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAuBgC;IAC/B,MAAM,QAAQ,SAAS;QACtB,MAAM;IACP;IAEA,qBAAqB;IACrB;;;IAIA,qBACC,WAAC;QAAI,QAAQ;iBACX;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "test.tsx_entry_Child",
  "displayName": "Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "child_component_9gyf01gdkqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    459,
    685
  ]
}
*/
============================= child_component_div_onclick_ellivsnaioq.js (ENTRY POINT)==

export const Child_component_div_onClick_elliVSnAiOQ = ()=>console.log('child');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAkCiB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_div_onClick_elliVSnAiOQ",
  "entry": null,
  "displayName": "Child_component_div_onClick",
  "hash": "elliVSnAiOQ",
  "canonicalFilename": "child_component_div_onclick_ellivsnaioq",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    626,
    652
  ]
}
*/
== DIAGNOSTICS ==

[]
