packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__lib_mode_fn_signal.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3720
expression: output
---
==INPUT==


		import { component$ } from '@builder.io/qwik';
		export const Counter = component$(() => {
			const count = useSignal(0);

			return (
				<div>
					<p>Count: {count.value}</p>
					<p>
						<button onClick$={() => count.value++}>Increment</button>
					</p>
				</div>
			);
		});

============================= counter_component_ztmrhll09gg.ts (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Counter_component_zTmRHlL09Gg = ()=>{
    const count = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("p", null, null, [
            "Count: ",
            _wrapProp(count)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("button", null, {
            onClick$: /*#__PURE__*/ qrl(()=>import("./counter_component_div_p_button_onclick_kqq00u8qaim"), "Counter_component_div_p_button_onClick_Kqq00U8qaIM", [
                count
            ])
        }, "Increment", 3, null), 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;6CAEoC;IACjC,MAAM,QAAQ,UAAU;IAExB,qBACC,WAAC;sBACA,WAAC;YAAE;sBAAQ;;sBACX,WAAC,+BACA,WAAC;YAAO,QAAQ;;;WAAuB;;AAI3C\"}")
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_zTmRHlL09Gg",
  "entry": null,
  "displayName": "Counter_component",
  "hash": "zTmRHlL09Gg",
  "canonicalFilename": "counter_component_ztmrhll09gg",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    285
  ]
}
*/
============================= counter_component_div_p_button_onclick_kqq00u8qaim.ts (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const Counter_component_div_p_button_onClick_Kqq00U8qaIM = ()=>{
    const [count] = useLexicalScope();
    return count.value++;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";kEASwB;;WAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_div_p_button_onClick_Kqq00U8qaIM",
  "entry": null,
  "displayName": "Counter_component_div_p_button_onClick",
  "hash": "Kqq00U8qaIM",
  "canonicalFilename": "counter_component_div_p_button_onclick_kqq00u8qaim",
  "path": "",
  "extension": "ts",
  "parent": "Counter_component_zTmRHlL09Gg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    215,
    234
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Counter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./counter_component_ztmrhll09gg"), "Counter_component_zTmRHlL09Gg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEE,OAAO,MAAM,wBAAU,gHAWpB\"}")
== DIAGNOSTICS ==

[]
