packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__relative_paths.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3415
expression: output
---
============================= ../../node_modules/dep/dist/app_component_div_p_button_onclick_8dwua0cjar4.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const App_component_div_p_button_onClick_8dWUa0cJAr4 = ()=>{
    const [store] = useLexicalScope();
    return store.count++;
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";8DAuB0B;IACpB,MAAM,CAAC,MAAM,GAAG;IAChB,OAAO,MAAM,KAAK;AACnB\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_div_p_button_onClick_8dWUa0cJAr4",
  "entry": null,
  "displayName": "App_component_div_p_button_onClick",
  "hash": "8dWUa0cJAr4",
  "canonicalFilename": "app_component_div_p_button_onclick_8dwua0cjar4",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": "App_component_AkbU84a8zes",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    574,
    655
  ]
}
*/
============================= ../../node_modules/dep/dist/app_component_akbu84a8zes.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { _auto_useData as useData } from "./lib.mjs";
export const App_component_AkbU84a8zes = ()=>{
    const store = useData();
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("p", null, null, [
            "Count: ",
            _wrapProp(store, "count")
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("button", {
            onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_div_p_button_onclick_8dwua0cjar4.js"), "App_component_div_p_button_onClick_8dWUa0cJAr4", [
                store
            ])
        }, null, "Click", 2, null), 1, null)
    ], 1, "70_0");
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;;;yCAWyD;IACxD,MAAM,QAAQ;IACd,OAAO,WAAW,GAAG,WAAK,mBACf;QACT,WAAW,GAAG,WAAK,iBACR;YACT;sBACA;SACA;QAEF,WAAW,GAAG,WAAI,iBACP,WAAW,GAAG,WAAI;YAC3B,QAAQ;;;iBAME;KAGZ;AAEH\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_AkbU84a8zes",
  "entry": null,
  "displayName": "App_component",
  "hash": "AkbU84a8zes",
  "canonicalFilename": "app_component_akbu84a8zes",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    303,
    776
  ]
}
*/
============================= ../../node_modules/dep/dist/lib.mjs ==

import { qrl } from "@builder.io/qwik";
import { componentQrl, useStore } from "@builder.io/qwik";
const useData = ()=>{
    return useStore({
        count: 0
    });
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_akbu84a8zes.js"), "App_component_AkbU84a8zes"));
export { useData as _auto_useData };


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,EAAc,QAAQ,QAAyB,mBAAmB;AAIvF,MAAM,UAAU;IACf,OAAO,SAAS;QACf,OAAO;IACR;AACD;AAEA,OAAO,MAAM,MAAM,WAAW,GAAG,2GAuBA\"}")
============================= components/local_component_jj0v28bs0p8.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { state } from "./sibling";
export const Local_component_jJ0v28bs0p8 = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, state, 3, "zp_0");
};


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;2CAIgC;IAC/B,qBACC,WAAC,mBAAK;AAER\"}")
/*
{
  "origin": "components/main.tsx",
  "name": "Local_component_jJ0v28bs0p8",
  "entry": null,
  "displayName": "Local_component",
  "hash": "jJ0v28bs0p8",
  "canonicalFilename": "local_component_jj0v28bs0p8",
  "path": "components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    120,
    163
  ]
}
*/
============================= components/main.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Local = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./local_component_jj0v28bs0p8.js"), "Local_component_jJ0v28bs0p8"));


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,sBAAQ,+GAIlB\"}")
== DIAGNOSTICS ==

[]
